k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: food-app-svc
  namespace: food-app
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
