k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: food-app-ingress
  namespace: food-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: food.home
    http:
      paths:
      - path: /.*
        pathType: Prefix
        backend:
          service:
            name: food-app-svc
            port: 
              number: 80
